Fix small spacing issue

--- a/server/static/base.less
+++ b/server/static/base.less
@@ -327,7 +327,7 @@ body #grid * {
 
 .layout-block {
   display: block;
-  & > .nested > .atom {
+  & > .nested > .atom:first-child {
     margin-left: 0px;
   }
   & > .nested > .atom.fieldaccessop {
